[package]
name = "image2text"
version = "1.0.0"
edition = "2021"
authors = ["Matthieu Casanova"]
description = "Convert an image to ascii art"
homepage = "https://github.com/kpouer/image2text"
repository = "https://github.com/kpouer/image2text"
license = "MIT"
keywords = ["image", "ascii", "art"]
categories = ["image", "ascii", "art"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
rgb2ansi256 = "0.1.1"