[package]
name = "image2text"
version = "1.0.1"
edition = "2021"
authors = ["Matthieu Casanova"]
description = "Convert an image to ascii art"
homepage = "https://github.com/kpouer/image2text"
repository = "https://github.com/kpouer/image2text"
license = "MIT"
readme = "README.md"
keywords = ["image", "ascii", "art"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rgb2ansi256 = "0.1.1"